--- a/src/panels/login.html
+++ b/src/panels/login.html
@@ -1,5 +1,6 @@
 <div class="container">
     <div class="login-home login-tabs">
+        <div class="login-title">Premium (Microsoft)</div>
         <div class="login-text">Veuillez vous identifier afin de jouer.</div>
 
         <div class="login-options">
@@ -9,6 +10,7 @@
     </div>
 
     <div class="login-offline login-tabs">
+        <div class="login-title">No premium (Offline)</div>
         <div class="login-text">Veuillez entrer votre pseudo</div>
 
         <div class="input-login">
